--- a/trulens_eval/examples/frameworks/langchain/langchain_math_agent.ipynb
+++ b/trulens_eval/examples/frameworks/langchain/langchain_math_agent.ipynb
@@ -4,7 +4,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Math agent as described in issue https://github.com/truera/trulens/issues/373"
+    "# LangChain Math Agent\n",
+    "\n",
+    "This notebook shows how to evaluate and track a langchain math agent with TruLens.\n",
+    "\n",
+    "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/truera/trulens/blob/main/trulens_eval/examples/frameworks/langchain/langchain_math_agent.ipynb)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Import from Langchain and TruLens"
    ]
   },
   {
@@ -13,14 +24,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Run this cell if executing notebook from github repo.\n",
-    "\n",
-    "%load_ext autoreload\n",
-    "%autoreload 2\n",
-    "from pathlib import Path\n",
-    "import sys\n",
-    "\n",
-    "sys.path.append(str(Path().cwd().parent.parent.parent.resolve()))"
+    "# ! pip install trulens==0.9.0 langchain==0.0.263"
    ]
   },
   {
@@ -34,6 +38,40 @@
     "from langchain.chat_models import ChatOpenAI\n",
     "from trulens_eval import Tru, TruChain\n",
     "\n",
+    "tru = Tru()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Add API keys\n",
+    "For this example you will need an Open AI key"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "os.environ[\"OPENAI_API_KEY\"] = \"...\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Create the application and wrap with TruLens"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "llm=ChatOpenAI(temperature=0, model=\"gpt-3.5-turbo-0613\")\n",
     "\n",
     "llm_math_chain = LLMMathChain.from_llm(llm, verbose=True)\n",
@@ -52,14 +90,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# Show the instrumented components:\n",
-    "\n",
-    "app.print_instrumented()"
+    "### Run the app"
    ]
   },
   {
@@ -68,14 +102,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Plain agent usage:\n",
-    "res1 = agent(inputs={\"input\": \"how much is Euler's number divided by PI\"})\n",
-    "\n",
-    "# Wrapped usage:\n",
-    "res2 = app(inputs={\"input\": \"how much is Euler's number divided by PI\"})\n",
-    "\n",
-    "# Wrapped usage with record:\n",
-    "res3, rec3 = app.with_record(agent, inputs={\"input\": \"how much is Euler's number divided by PI\"})"
+    "app(inputs={\"input\": \"how much is Euler's number divided by PI\"})"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Start the TruLens dashboard to explore"
    ]
   },
   {
@@ -84,14 +118,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Show the record structure.\n",
-    "rec3.dict()"
+    "tru.run_dashboard()"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "py38_trulens",
+   "display_name": "Python 3.11.4 ('agents')",
    "language": "python",
    "name": "python3"
   },
@@ -105,9 +138,14 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.16"
+   "version": "3.11.4"
   },
-  "orig_nbformat": 4
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "7d153714b979d5e6d08dd8ec90712dd93bff2c9b6c1f0c118169738af3430cd4"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
