--- a/trulens_eval/examples/frameworks/langchain/langchain_summarize.ipynb
+++ b/trulens_eval/examples/frameworks/langchain/langchain_summarize.ipynb
@@ -12,14 +12,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Import libraries"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os\n",
-    "os.environ[\"OPENAI_API_KEY\"] = \"...\"\n",
-    "os.environ[\"HUGGINGFACE_API_KEY\"] = \"...\""
+    "# ! pip install trulens==0.9.0 langchain==0.0.263"
    ]
   },
   {
@@ -34,9 +39,27 @@
     "from trulens_eval import TruChain, Feedback, Tru, Query, FeedbackMode\n",
     "from trulens_eval import OpenAI as OAI\n",
     "\n",
-    "tru = Tru()\n",
+    "tru = Tru()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Set API Keys\n",
     "\n",
-    "tru.run_dashboard()"
+    "For this example, we need API keys for the Huggingface and OpenAI"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "os.environ[\"HUGGINGFACE_API_KEY\"] = \"...\"\n",
+    "os.environ[\"OPENAI_API_KEY\"] = \"...\""
    ]
   },
   {
@@ -88,6 +111,22 @@
     "\n",
     "docs, chain = get_summary_model(text)\n",
     "output, record = wrap_chain_trulens(chain).call_with_record(docs)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Run the TruLens dashboard"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tru.run_dashboard()"
    ]
   }
  ],
