--- a/trulens_eval/examples/frameworks/llama_index/llama_index_agents.ipynb
+++ b/trulens_eval/examples/frameworks/llama_index/llama_index_agents.ipynb
@@ -22,39 +22,24 @@
     "\n",
     "Last, we'll compare the evaluation of this app against a standalone LLM. May the best bot win?\n",
     "\n",
-    "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/truera/trulens/blob/main/trulens_eval/examples/frameworks/llama_index/llamaindex-yelp-agent.ipynb)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "! pip install trulens_eval==0.10.0 llama_index==0.8.3 llama_hub==0.0.13 yelpapi==2.5.0"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "YELP_API_KEY = \"...\"\n",
-    "YELP_CLIENT_ID = \"...\"\n",
-    "OPENAI_API_KEY = \"...\"\n",
-    "\n",
-    "import os\n",
-    "os.environ[\"OPENAI_API_KEY\"] = OPENAI_API_KEY"
+    "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/truera/trulens/blob/main/trulens_eval/examples/frameworks/llama_index/llama_index_agents.ipynb)"
+
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Set up our Llama-Index App\n",
-    "\n",
-    "For this app, we will use a tool from Llama-Index to connect to Yelp and allow the Agent to search for business and fetch reviews."
+    "### import from TruLens and Llama-Index"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#! pip install trulens_eval==0.7.0 llama_index==0.7.11 llama_hub==0.0.13 yelpapi==2.5.0"
    ]
   },
   {
@@ -69,8 +54,30 @@
     "from llama_index import question_gen\n",
     "from llama_index.question_gen import types\n",
     "import openai\n",
-    "import os\n",
-    "openai.api_key = os.environ[\"OPENAI_API_KEY\"]"
+    "\n",
+    "import os"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "os.environ[\"OPENAI_API_KEY\"] = \"...\"\n",
+    "openai.api_key = os.environ[\"OPENAI_API_KEY\"]\n",
+    "\n",
+    "YELP_API_KEY = \"...\"\n",
+    "YELP_CLIENT_ID = \"...\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Set up our Llama-Index App\n",
+    "\n",
+    "For this app, we will use a tool from Llama-Index to connect to Yelp and allow the Agent to search for business and fetch reviews."
    ]
   },
   {
