--- a/trulens_eval/examples/frameworks/langchain/langchain_agents.ipynb
+++ b/trulens_eval/examples/frameworks/langchain/langchain_agents.ipynb
@@ -30,6 +30,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# ! pip install trulens==0.9.0 langchain==0.0.263 yfinance==0.2.27 google-search-results==2.4.2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "from IPython.display import JSON\n",
     "from trulens_eval import TruChain, Feedback, Huggingface, Tru\n",
     "from trulens_eval.feedback import OpenAI as fOpenAI\n",
