--- a/trulens_eval/examples/frameworks/langchain/langchain_groundtruth.ipynb
+++ b/trulens_eval/examples/frameworks/langchain/langchain_groundtruth.ipynb
@@ -4,11 +4,45 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Quickstart\n",
+    "# Ground Truth Evaluations\n",
     "\n",
-    "In this quickstart you will create a evaluate a LangChain app using ground truth.\n",
+    "In this quickstart you will create a evaluate a LangChain app using ground truth. Ground truth evaluation can be especially useful during early LLM experiments when you have a small set of example queries that are critical to get right.\n",
+    "\n",
+    "Ground truth evaluation works by comparing the similarity of an LLM response compared to its matching verified response.\n",
     "\n",
     "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/truera/trulens/blob/main/trulens_eval/examples/frameworks/langchain/langchain_groundtruth.ipynb)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Import from LlamaIndex and TruLens"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# ! pip install trulens_eval==0.9.0 langchain==0.0.263"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from langchain.chains import LLMChain\n",
+    "from langchain.llms import OpenAI\n",
+    "from langchain.prompts.chat import ChatPromptTemplate, PromptTemplate\n",
+    "from langchain.prompts.chat import HumanMessagePromptTemplate\n",
+    "\n",
+    "from trulens_eval import Feedback, Tru, TruChain\n",
+    "from trulens_eval.feedback import GroundTruthAgreement, Huggingface\n",
+    "tru = Tru()"
    ]
   },
   {
@@ -26,39 +60,8 @@
    "outputs": [],
    "source": [
     "import os\n",
-    "os.environ[\"OPENAI_API_KEY\"] = \"...\"\n",
-    "os.environ[\"HUGGINGFACE_API_KEY\"] = \"...\""
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Import from LlamaIndex and TruLens"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from langchain.chains import LLMChain\n",
-    "from langchain.llms import OpenAI\n",
-    "from langchain.prompts.chat import ChatPromptTemplate, PromptTemplate\n",
-    "from langchain.prompts.chat import HumanMessagePromptTemplate"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Imports main tools:\n",
-    "from trulens_eval import Feedback, Tru, TruChain\n",
-    "from trulens_eval.feedback import GroundTruthAgreement, Huggingface\n",
-    "tru = Tru()"
+    "os.environ[\"HUGGINGFACE_API_KEY\"] = \"...\"\n",
+    "os.environ[\"OPENAI_API_KEY\"] = \"...\""
    ]
   },
   {
@@ -109,8 +112,7 @@
     "    {\"query\": \"¿quien invento la bombilla?\", \"response\": \"Thomas Edison\"}\n",
     "]\n",
     "\n",
-    "\n",
-    "f_groundtruth = Feedback(GroundTruthAgreement(golden_set).agreement_measure).on_input_output()\n",
+    "f_groundtruth = Feedback(GroundTruthAgreement(golden_set).agreement_measure, name = \"Ground Truth\").on_input_output()\n",
     "\n",
     "# Define a language match feedback function using HuggingFace.\n",
     "hugs = Huggingface()\n",
@@ -165,7 +167,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.11.4 ('groundtruth_testing')",
+   "display_name": "Python 3.11.4 ('agents')",
    "language": "python",
    "name": "python3"
   },
@@ -183,7 +185,7 @@
   },
   "vscode": {
    "interpreter": {
-    "hash": "3179d9efafb86dc30d9f9d1f4aa6b1cf4829cf08d137a56e94108aedc04c904a"
+    "hash": "7d153714b979d5e6d08dd8ec90712dd93bff2c9b6c1f0c118169738af3430cd4"
    }
   }
  },
