--- a/trulens_eval/examples/frameworks/langchain/langchain_model_comparison.ipynb
+++ b/trulens_eval/examples/frameworks/langchain/langchain_model_comparison.ipynb
@@ -4,13 +4,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Comparing Models in TruLens\n",
+    "## LLM Comparison\n",
     "\n",
-    "Here we'll build a simple app with langchain and load large and small flan.\n",
+    "When building an LLM application we have hundreds of different models to choose from, all with different costs/latency and performance characteristics. Importantly, performance of LLMs can be heterogeneous across different use cases. Rather than relying on standard benchmarks or leaderboard performance, we want to evaluate an LLM for the use case we need.\n",
     "\n",
-    "Then we'll ask it a few football questions and compare the quality of the responses.\n",
-    "\n",
-    "We'll also compare to OpenAI's text-turbo-003.\n",
+    "Doing this sort of comparison is a core use case of TruLens. In this example, we'll walk through how to build a simple langchain app and evaluate across 3 different models: small flan, large flan and text-turbo-3.\n",
     "\n",
     "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/truera/trulens/blob/main/trulens_eval/examples/frameworks/langchain/langchain_model_comparison.ipynb)"
    ]
@@ -28,11 +26,31 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# ! pip install trulens==0.9.0 langchain==0.0.263"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "import os\n",
     "\n",
     "from IPython.display import JSON\n",
     "\n",
     "import numpy as np\n",
+    "\n",
+    "# Imports from langchain to build app. You may need to install langchain first\n",
+    "# with the following:\n",
+    "# ! pip install langchain>=0.0.170\n",
+    "from langchain.chains import LLMChain\n",
+    "from langchain.llms import OpenAI\n",
+    "from langchain.prompts.chat import ChatPromptTemplate, PromptTemplate\n",
+    "from langchain.prompts.chat import HumanMessagePromptTemplate\n",
+    "from langchain import PromptTemplate\n",
+    "from langchain.llms import OpenAI\n",
+    "from langchain import LLMChain\n",
     "\n",
     "# Imports main tools:\n",
     "from trulens_eval import TruChain, Feedback, Huggingface, Tru\n",
@@ -45,27 +63,16 @@
     "from trulens_eval import Tru\n",
     "from trulens_eval.utils.langchain import WithFeedbackFilterDocuments\n",
     "\n",
-    "# Tru object manages the database of apps, records, and feedbacks; and the\n",
-    "# dashboard to display these\n",
-    "tru = Tru()\n",
-    "\n",
-    "# Imports from langchain to build app. You may need to install langchain first\n",
-    "# with the following:\n",
-    "# ! pip install langchain>=0.0.170\n",
-    "from langchain.chains import LLMChain\n",
-    "from langchain.llms import OpenAI\n",
-    "from langchain.prompts.chat import ChatPromptTemplate, PromptTemplate\n",
-    "from langchain.prompts.chat import HumanMessagePromptTemplate\n",
-    "from langchain import PromptTemplate\n",
-    "from langchain.llms import OpenAI\n",
-    "from langchain import LLMChain"
+    "tru = Tru()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Set API Keys"
+    "### Set API Keys\n",
+    "\n",
+    "For this example, we need API keys for the Huggingface, HuggingFaceHub, and OpenAI"
    ]
   },
   {
@@ -74,13 +81,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from trulens_eval.keys import check_keys\n",
-    "\n",
-    "check_keys(\n",
-    "    \"OPENAI_API_KEY\",\n",
-    "    \"HUGGINGFACE_API_KEY\",\n",
-    "    \"HUGGINGFACEHUB_API_TOKEN\"\n",
-    ")"
+    "import os\n",
+    "os.environ[\"HUGGINGFACE_API_KEY\"] = \"...\"\n",
+    "os.environ[\"HUGGINGFACEHUB_API_TOKEN\"] = \"...\"\n",
+    "os.environ[\"OPENAI_API_KEY\"] = \"...\""
    ]
   },
   {
@@ -102,10 +106,7 @@
     "prompt = PromptTemplate(\n",
     "        template=template,\n",
     "    input_variables=['question']\n",
-    ")\n",
-    "\n",
-    "# user question\n",
-    "question = \"Which NFL team won the Super Bowl in the 2010 season?\""
+    ")"
    ]
   },
   {
@@ -125,22 +126,11 @@
     "hugs = feedback.Huggingface()\n",
     "openai = feedback.OpenAI()\n",
     "\n",
-    "# Language match between question/answer.\n",
-    "f_lang_match = Feedback(hugs.language_match).on_input_output()\n",
-    "# By default this will evaluate feedback on main app input and main app output.\n",
-    "\n",
     "# Question/answer relevance between overall question and answer.\n",
     "f_qa_relevance = Feedback(openai.relevance).on_input_output()\n",
     "# By default this will evaluate feedback on main app input and main app output.\n",
     "\n",
-    "# Question/statement relevance between question and each context chunk.\n",
-    "f_qs_relevance = feedback.Feedback(openai.qs_relevance).on_input().on(\n",
-    "    Select.Record.app.combine_docs_chain._call.args.inputs.input_documents[:].page_content\n",
-    ").aggregate(np.min)\n",
-    "# First feedback argument is set to main app input, and the second is taken from\n",
-    "# the context sources as passed to an internal `combine_docs_chain._call`.\n",
-    "\n",
-    "all_feedbacks = [f_lang_match, f_qa_relevance, f_qs_relevance]"
+    "all_feedbacks = [f_qa_relevance]"
    ]
   },
   {
@@ -158,67 +148,60 @@
    "source": [
     "from langchain import HuggingFaceHub, LLMChain\n",
     "\n",
-    "model = 'google/flan-t5-small'\n",
-    "\n",
-    "# initialize Hub LLM\n",
-    "hub_llm = HuggingFaceHub(\n",
-    "        repo_id = model,\n",
+    "# initialize the models\n",
+    "hub_llm_smallflan = HuggingFaceHub(\n",
+    "        repo_id = 'google/flan-t5-small',\n",
     "    model_kwargs = {'temperature':1e-10}\n",
     ")\n",
     "\n",
-    "# create prompt template > LLM chain\n",
-    "llm_chain = LLMChain(\n",
-    "    prompt=prompt,\n",
-    "    llm=hub_llm\n",
-    ")\n",
-    "\n",
-    "# Trulens instrumentation.\n",
-    "tc = tru.Chain(\n",
-    "        app_id=f\"{model}/v1\",\n",
-    "        chain=llm_chain,\n",
-    "        feedbacks=all_feedbacks\n",
-    "    )\n",
-    "\n",
-    "tc('Who won the superbowl in 2010?')    \n",
-    "tc('Who won the heisman in 1995')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "model = 'google/flan-t5-large'\n",
-    "\n",
-    "# initialize Hub LLM\n",
-    "hub_llm = HuggingFaceHub(\n",
-    "        repo_id = model,\n",
+    "hub_llm_largeflan = HuggingFaceHub(\n",
+    "        repo_id = 'google/flan-t5-large',\n",
     "    model_kwargs = {'temperature':1e-10}\n",
     ")\n",
     "\n",
+    "davinci = OpenAI(model_name='text-davinci-003')\n",
+    "\n",
     "# create prompt template > LLM chain\n",
-    "llm_chain = LLMChain(\n",
+    "smallflan_chain = LLMChain(\n",
     "    prompt=prompt,\n",
-    "    llm=hub_llm\n",
+    "    llm=hub_llm_smallflan\n",
+    ")\n",
+    "\n",
+    "largeflan_chain = LLMChain(\n",
+    "    prompt=prompt,\n",
+    "    llm=hub_llm_largeflan\n",
+    ")\n",
+    "\n",
+    "davinci_chain = LLMChain(\n",
+    "    prompt=prompt,\n",
+    "    llm=davinci\n",
     ")\n",
     "\n",
     "# Trulens instrumentation.\n",
-    "tc = tru.Chain(\n",
-    "        app_id=f\"{model}/v1\",\n",
-    "        chain=llm_chain,\n",
+    "smallflan_app = TruChain(\n",
+    "        app_id=f\"small_flan/v1\",\n",
+    "        app=smallflan_chain,\n",
     "        feedbacks=all_feedbacks\n",
     "    )\n",
     "\n",
-    "tc('Who won the superbowl in 2010?')    \n",
-    "tc('Who won the heisman in 1995')"
+    "largeflan_app = TruChain(\n",
+    "        app_id=f\"large_flan/v1\",\n",
+    "        app=largeflan_chain,\n",
+    "        feedbacks=all_feedbacks\n",
+    "    )\n",
+    "\n",
+    "davinci_app = TruChain(\n",
+    "        app_id=f\"davinci/v1\",\n",
+    "        app=davinci_chain,\n",
+    "        feedbacks=all_feedbacks\n",
+    "    )"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Load OpenAI Models"
+    "### Run the application with all 3 models"
    ]
   },
   {
@@ -227,24 +210,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = 'text-davinci-003'\n",
+    "prompts = [\n",
+    "    \"Who won the superbowl in 2010?\",\n",
+    "    \"What is the capital of Thailand?\",\n",
+    "    \"Who developed the theory of evolution by natural selection?\"\n",
+    "    ]\n",
     "\n",
-    "davinci = OpenAI(model_name=model)\n",
-    "\n",
-    "llm_chain = LLMChain(\n",
-    "    prompt=prompt,\n",
-    "    llm=davinci\n",
-    ")\n",
-    "\n",
-    "# Trulens instrumentation.\n",
-    "tc = tru.Chain(\n",
-    "        app_id=f\"{model}/v1\",\n",
-    "        chain=llm_chain,\n",
-    "        feedbacks=all_feedbacks\n",
-    "    )\n",
-    "\n",
-    "tc('Who won the superbowl in 2010?')    \n",
-    "tc('Who won the heisman in 1995')"
+    "for prompt in prompts:\n",
+    "    smallflan_app(prompt)\n",
+    "    largeflan_app(prompt)\n",
+    "    davinci_app(prompt)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Run the TruLens dashboard"
    ]
   },
   {
@@ -259,7 +241,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.11 ('trulens')",
+   "display_name": "Python 3.11.4 ('agents')",
    "language": "python",
    "name": "python3"
   },
@@ -273,12 +255,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.11"
+   "version": "3.11.4"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "c633204c92f433e69d41413efde9db4a539ce972d10326abcceb024ad118839e"
+    "hash": "7d153714b979d5e6d08dd8ec90712dd93bff2c9b6c1f0c118169738af3430cd4"
    }
   }
  },
