--- a/trulens_eval/examples/frameworks/llama_index/llama_index_async.ipynb
+++ b/trulens_eval/examples/frameworks/llama_index/llama_index_async.ipynb
@@ -4,7 +4,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# llama_index async Example"
+    "# Llama-Index Async\n",
+    "\n",
+    "Async is a growing method for LLM applications and can be especially useful for reducing indexing time. This notebook demonstrates how to monitor Llama-index async apps with TruLens."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Import from Llama-Index and TruLens"
    ]
   },
   {
@@ -13,26 +22,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%load_ext autoreload\n",
-    "%autoreload 2\n",
-    "from pathlib import Path\n",
-    "import sys\n",
-    "\n",
-    "# If running from github repo, can use this:\n",
-    "sys.path.append(str(Path().cwd().parent.parent.parent.resolve()))\n",
-    "\n",
-    "# Uncomment for more debugging printouts.\n",
-    "\"\"\"\n",
-    "import logging\n",
-    "root = logging.getLogger()\n",
-    "root.setLevel(logging.DEBUG)\n",
-    "\n",
-    "handler = logging.StreamHandler(sys.stdout)\n",
-    "handler.setLevel(logging.DEBUG)\n",
-    "formatter = logging.Formatter('%(asctime)s - %(name)s - %(levelname)s - %(message)s')\n",
-    "handler.setFormatter(formatter)\n",
-    "root.addHandler(handler)\n",
-    "\"\"\""
+    "# ! pip install trulens_eval==0.9.0 llama_index== 0.7.16 html2text==2020.1.16"
    ]
   },
   {
@@ -41,22 +31,45 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# ! pip install html2text==2020.1.16"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Imports main tools:\n",
+    "from llama_index import VectorStoreIndex, SimpleWebPageReader\n",
+    "import openai\n",
     "from trulens_eval import TruLlama, Feedback, Tru, feedback, Select\n",
     "\n",
-    "tru = Tru()\n",
-    "\n",
-    "from llama_index import VectorStoreIndex, SimpleWebPageReader\n",
-    "\n",
+    "tru = Tru()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Add API keys\n",
+    "For this example you need an OpenAI key"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "os.environ[\"OPENAI_API_KEY\"] = \"...\"\n",
+    "openai.api_key = os.environ[\"OPENAI_API_KEY\"] "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Create Async App"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "documents = SimpleWebPageReader(html_to_text=True).load_data(\n",
     "    [\"http://paulgraham.com/worked.html\"]\n",
     ")\n",
@@ -77,6 +90,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Set up Evaluation"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -84,24 +104,18 @@
    "source": [
     "import numpy as np\n",
     "\n",
-    "# Initialize Huggingface-based feedback function collection class:\n",
-    "hugs = feedback.Huggingface()\n",
+    "# Initialize OpenAI-based feedback function collection class:\n",
     "openai = feedback.OpenAI()\n",
     "\n",
-    "# Define a language match feedback function using HuggingFace.\n",
-    "f_lang_match = Feedback(hugs.language_match).on_input_output()\n",
-    "# By default this will check language match on the main app input and main app\n",
-    "# output.\n",
-    "\n",
     "# Question/answer relevance between overall question and answer.\n",
-    "f_qa_relevance = Feedback(openai.relevance).on_input_output()\n",
-    "\n",
-    "# Question/statement relevance between question and each context chunk. Note\n",
-    "# limitation that we cannot use `TruLlama.select_source_nodes().node.text` here\n",
-    "# as that assumes the main callable of the engine is `query`, not `aquery`.\n",
-    "f_qs_relevance = Feedback(openai.qs_relevance).on_input().on(\n",
-    "    Select.Record.app.aquery.rets.source_nodes[:].node.text\n",
-    ").aggregate(np.mean)"
+    "f_qa_relevance = Feedback(openai.relevance, name=\"QA Relevance\").on_input_output()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Create tracked app"
    ]
   },
   {
@@ -111,17 +125,15 @@
    "outputs": [],
    "source": [
     "tru_query_engine = TruLlama(\n",
-    "    query_engine, feedbacks=[f_lang_match, f_qa_relevance, f_qs_relevance]\n",
+    "    query_engine, feedbacks=[f_qa_relevance, f_qs_relevance]\n",
     ")"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "tru_query_engine.print_instrumented()"
+    "### Run Async Application with TruLens"
    ]
   },
   {
@@ -137,69 +149,18 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Streaming test\n",
-    "\n",
-    "Note that records with llama_index streaming mode are filled before the stream is complete. This is ongoing work."
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "query_engine = index.as_query_engine(streaming=True)\n",
-    "tru_query_engine = TruLlama(\n",
-    "    query_engine, feedbacks=[f_lang_match, f_qa_relevance, f_qs_relevance]\n",
-    ")"
+    "tru.run_dashboard()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "response, record = tru_query_engine.query_with_record(\n",
-    "    \"What did the author do growing up?\"\n",
-    ")\n",
-    "\n",
-    "for c in response.response_gen:\n",
-    "    print(c)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "record"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "proc = Tru().start_dashboard(force=True, _dev=Path.cwd().parent.parent.parent)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "py38_trulens",
+   "display_name": "Python 3.11.4 ('agents')",
    "language": "python",
    "name": "python3"
   },
@@ -213,9 +174,14 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.16"
+   "version": "3.11.4"
   },
-  "orig_nbformat": 4
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "7d153714b979d5e6d08dd8ec90712dd93bff2c9b6c1f0c118169738af3430cd4"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
