--- a/trulens_eval/examples/frameworks/llama_index/llama_index_groundtruth.ipynb
+++ b/trulens_eval/examples/frameworks/llama_index/llama_index_groundtruth.ipynb
@@ -4,9 +4,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Quickstart\n",
+    "# Groundtruth evaluation for Llama-Index applications\n",
     "\n",
-    "In this quickstart you will create a simple Llama Index App and learn how to log it and get feedback on an LLM response.\n",
+    "Ground truth evaluation can be especially useful during early LLM experiments when you have a small set of example queries that are critical to get right. Ground truth evaluation works by comparing the similarity of an LLM response compared to its matching verified response.\n",
+    "\n",
+    "This example walks through how to set up ground truth eval for a Llama-Index app.\n",
     "\n",
     "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/truera/trulens/blob/main/trulens_eval/examples/frameworks/llama_index/llama_index_groundtruth.ipynb)"
    ]
@@ -15,10 +17,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Setup\n",
-    "\n",
-    "### Install dependencies\n",
-    "Let's install some of the dependencies for this notebook if we don't have them already"
+    "### import from TruLens and Llama-Index"
    ]
   },
   {
@@ -27,7 +26,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "! pip install trulens-eval llama_index==0.8.3"
+    "#! pip install trulens-eval==0.9.0 llama_index==0.7.16"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from llama_index import VectorStoreIndex, SimpleWebPageReader\n",
+    "import openai\n",
+    "\n",
+    "from trulens_eval import TruLlama, Feedback, Tru, feedback, FeedbackMode\n",
+    "from trulens_eval.feedback import GroundTruthAgreement\n",
+    "from trulens_eval.util import jsonify\n",
+    "tru = Tru()"
+
    ]
   },
   {
@@ -46,26 +61,7 @@
    "source": [
     "import os\n",
     "os.environ[\"OPENAI_API_KEY\"] = \"...\"\n",
-    "os.environ[\"HUGGINGFACE_API_KEY\"] = \"...\""
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Import from LlamaIndex and TruLens"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Imports main tools:\n",
-    "from trulens_eval import TruLlama, Feedback, Tru, feedback\n",
-    "from trulens_eval.feedback import GroundTruthAgreement\n",
-    "tru = Tru()"
+    "openai.api_key = os.environ[\"OPENAI_API_KEY\"]"
    ]
   },
   {
@@ -83,32 +79,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# LLama Index starter example from: https://gpt-index.readthedocs.io/en/latest/getting_started/starter_example.html\n",
-    "# In order to run this, download into data/ Paul Graham's Essay 'What I Worked On' from https://github.com/jerryjliu/llama_index/blob/main/examples/paul_graham_essay/data/paul_graham_essay.txt \n",
-    "\n",
-    "from llama_index import VectorStoreIndex, SimpleDirectoryReader\n",
-    "\n",
-    "documents = SimpleDirectoryReader('data').load_data()\n",
+    "documents = SimpleWebPageReader(html_to_text=True).load_data(\n",
+    "    [\"http://paulgraham.com/worked.html\"]\n",
+    ")\n",
     "index = VectorStoreIndex.from_documents(documents)\n",
     "\n",
     "query_engine = index.as_query_engine()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Send your first request"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#response = query_engine.query(\"What did the author do growing up?\")\n",
-    "#print(response)"
    ]
   },
   {
@@ -124,24 +100,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np\n",
-    "\n",
-    "# Initialize Huggingface-based feedback function collection class:\n",
-    "hugs = feedback.Huggingface()\n",
-    "openai = feedback.OpenAI()\n",
-    "\n",
-    "# Define a language match feedback function using HuggingFace.\n",
-    "f_lang_match = Feedback(hugs.language_match).on_input_output()\n",
-    "# By default this will check language match on the main app input and main app\n",
-    "# output.\n",
-    "\n",
-    "# Question/answer relevance between overall question and answer.\n",
-    "f_qa_relevance = Feedback(openai.relevance).on_input_output()\n",
-    "\n",
-    "# Question/statement relevance between question and each context chunk.\n",
-    "f_qs_relevance = Feedback(openai.qs_relevance).on_input().on(\n",
-    "    TruLlama.select_source_nodes().node.text\n",
-    ").aggregate(np.min)"
+    "# Initialize OpenAI-based feedback function collection class:\n",
+    "openai = feedback.OpenAI()"
    ]
   },
   {
@@ -165,14 +125,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "f_groundtruth = Feedback(GroundTruthAgreement(golden_set).agreement_measure).on_input_output()"
+    "f_groundtruth = Feedback(GroundTruthAgreement(golden_set).agreement_measure, name = \"Ground Truth Eval\").on_input_output()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Instrument chain for logging with TruLens"
+    "### Instrument the application with Ground Truth Eval"
    ]
   },
   {
@@ -183,21 +143,15 @@
    "source": [
     "tru_query_engine = TruLlama(query_engine,\n",
     "    app_id='LlamaIndex_App1',\n",
-    "    feedbacks=[f_lang_match, f_qa_relevance, f_qs_relevance, f_groundtruth],\n",
-    "    # feedback_mode=FeedbackMode.DEFERRED # should cause failure but does not\n",
+    "    feedbacks=[f_groundtruth],\n",
     ")"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# Instrumented query engine can operate like the original:\n",
-    "llm_response = tru_query_engine.query(\"Where was the author born?\")\n",
-    "\n",
-    "print(llm_response)"
+    "### Run the application for all queries in the golden set"
    ]
   },
   {
@@ -217,7 +171,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Explore in a Dashboard"
+    "### Explore with the TruLens dashboard"
    ]
   },
   {
@@ -226,10 +180,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# tru.run_dashboard() # open a local streamlit app to explore\n",
-    "\n",
-    "# If running from github repo:\n",
-    "tru.run_dashboard(force=True, _dev=Path().cwd().parent.parent.parent.resolve()) # open a local streamlit app to explore\n",
+    "tru.run_dashboard() # open a local streamlit app to explore\n",
     "\n",
     "# tru.stop_dashboard() # stop if needed"
    ]
@@ -238,7 +189,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Or view results directly in your notebook"
+    "### Or view results directly in your notebook"
    ]
   },
   {
@@ -253,7 +204,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.11.4 ('agents')",
    "language": "python",
    "name": "python3"
   },
@@ -267,11 +218,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.16"
+   "version": "3.11.4"
   },
   "vscode": {
    "interpreter": {
-    "hash": "d5737f6101ac92451320b0e41890107145710b89f85909f3780d702e7818f973"
+    "hash": "7d153714b979d5e6d08dd8ec90712dd93bff2c9b6c1f0c118169738af3430cd4"
    }
   }
  },
