--- a/trulens_eval/examples/frameworks/llama_index/llama_index_quickstart.ipynb
+++ b/trulens_eval/examples/frameworks/llama_index/llama_index_quickstart.ipynb
@@ -29,7 +29,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "! pip install trulens-eval==0.10.0 llama_index==0.8.3 html2text==2020.1.16"
+    "#! pip install trulens-eval==0.10.0 llama_index==0.8.5.post2 html2text==2020.1.16"
    ]
   },
   {
@@ -68,7 +68,7 @@
    "source": [
     "# Imports main tools:\n",
     "from trulens_eval import TruLlama, Feedback, Tru, feedback\n",
-    "tru = Tru()\n"
+    "tru = Tru()"
    ]
   },
   {
@@ -281,7 +281,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.16"
+   "version": "3.11.4"
   },
   "vscode": {
    "interpreter": {
