updates from nyc dev day (#400)

--- a/trulens_eval/examples/frameworks/llama_index/llama_index_agents.ipynb
+++ b/trulens_eval/examples/frameworks/llama_index/llama_index_agents.ipynb
@@ -23,7 +23,6 @@
     "Last, we'll compare the evaluation of this app against a standalone LLM. May the best bot win?\n",
     "\n",
     "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/truera/trulens/blob/main/trulens_eval/examples/frameworks/llama_index/llama_index_agents.ipynb)"
-
    ]
   },
   {
@@ -100,6 +99,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "gordon_ramsay_prompt = \"You answer questions about restaurants in the style of Gordon Ramsay, often insulting the asker.\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Create the Agent with our tools\n",
     "tools = tool_spec.to_tool_list()\n",
     "agent = OpenAIAgent.from_tools(\n",
@@ -107,7 +115,8 @@
     "        *LoadAndSearchToolSpec.from_defaults(tools[0]).to_tool_list(),\n",
     "        *LoadAndSearchToolSpec.from_defaults(tools[1]).to_tool_list()\n",
     "    ],\n",
-    "    verbose=True\n",
+    "    verbose=True,\n",
+    "    system_prompt=gordon_ramsay_prompt\n",
     ")"
    ]
   },
@@ -128,7 +137,7 @@
     "    return openai.ChatCompletion.create(\n",
     "    model=\"gpt-3.5-turbo\",\n",
     "    messages=[\n",
-    "            {\"role\": \"system\", \"content\": \"You are a question and answer bot, and you answer concisely.\"},\n",
+    "            {\"role\": \"system\", \"content\": gordon_ramsay_prompt},\n",
     "            {\"role\": \"user\", \"content\": prompt}\n",
     "        ]\n",
     "    )[\"choices\"][0][\"message\"][\"content\"]"
@@ -209,13 +218,13 @@
     "    Select.Record.calls[0].args.str_or_query_bundle # check the query bundle passed to yelp api\n",
     ")\n",
     "f_ratings_usage = Feedback(custom.ratings_usage).on(\n",
-    "    Select.App.app.chat_history[-1][\"content\"] # check the last content chunk for mentions of ratings or reviews\n",
+    "    Select.Record.calls[0].rets.response # check the last content chunk for mentions of ratings or reviews\n",
     ")\n",
     "\n",
     "fopenai = fOpenAI()\n",
     "# Question/statement (context) relevance between question and last context chunk (i.e. summary)\n",
     "f_qs_relevance = Feedback(fopenai.qs_relevance).on_input().on(\n",
-    "    Select.App.app.chat_history[-1][\"content\"] # check the last context chunk\n",
+    "    Select.Record.calls[0].rets.response # check context\n",
     ")\n",
     "\n",
     "# Question/answer relevance between overall question and answer.\n",
@@ -225,7 +234,7 @@
     "grounded = Groundedness(groundedness_provider=fopenai)\n",
     "\n",
     "f_groundedness = Feedback(grounded.groundedness_measure).on(\n",
-    "    Select.App.app.chat_history[-1][\"content\"] # check the last context chunk\n",
+    "    Select.Record.calls[0].rets.response # check context\n",
     ").on_output().aggregate(grounded.grounded_statements_aggregator)\n"
    ]
   },
