no root methods and recordkeeping with context managers (#344)
* factored out with_* from tru_chain

* context manager

* typo and notes

* example update

* working on instrumentation issues

* context manager work

* working state

* forgot async

* clear output

* add dep notices to llama index wrapper

* docstrings

* nit

* remove uneeded

* nit

* fix metadata merge

* fix nested contexts

* add tests for context manangers

--- a/trulens_eval/examples/trubot/trubot_example.ipynb
+++ b/trulens_eval/examples/trubot/trubot_example.ipynb
@@ -127,7 +127,7 @@
     "# If needed, you can reset the trulens_eval dashboard database by running the\n",
     "# below line:\n",
     "\n",
-    "# tru.reset_database()"
+    "tru.reset_database()"
    ]
   },
   {
@@ -281,7 +281,7 @@
     "        feedback_mode=feedback_mode, \n",
     "    )\n",
     "\n",
-    "    return tc"
+    "    return app, tc"
    ]
   },
   {
@@ -292,11 +292,11 @@
    "source": [
     "# Instantiate the app with fresh memory:\n",
     "\n",
-    "tc1 = v1_new_conversation()\n",
+    "app1, tc1 = v1_new_conversation()\n",
     "\n",
     "# Call the app:\n",
     "\n",
-    "res, record = tc1.call_with_record(\"Who is Shayak?\")\n",
+    "res, record = tc1.with_record(app1, \"Who is Shayak?\")\n",
     "res\n",
     "\n",
     "# Notice the `source_documents` returned include chunks about Shameek and the\n",
@@ -326,10 +326,10 @@
     "\n",
     "# Start a new conversation as the app keeps prior questions in its memory which\n",
     "# may cause you some testing woes.\n",
-    "tc1 = v1_new_conversation()\n",
+    "app1, tc1 = v1_new_conversation()\n",
     "\n",
-    "# res, record = tc1.call_with_record(\"Co jest QII?\") # Polish\n",
-    "res, record = tc1.call_with_record(\"Was ist QII?\") # German\n",
+    "# res, record = tc1.with_record(app1, \"Co jest QII?\") # Polish\n",
+    "res, record = tc1.with_record(app1, \"Was ist QII?\") # German\n",
     "res\n",
     "\n",
     "# Note here the response is in English. This example sometimes matches language\n",
@@ -418,7 +418,7 @@
     "        feedback_mode=feedback_mode\n",
     "    )\n",
     "\n",
-    "    return tc"
+    "    return app, tc"
    ]
   },
   {
@@ -429,11 +429,11 @@
    "source": [
     "# Instantiate the version 2 app:\n",
     "\n",
-    "tc2 = v2_new_conversation()\n",
+    "app2, tc2 = v2_new_conversation()\n",
     "\n",
     "# Now the non-English question again:\n",
     "\n",
-    "res, record = tc2.call_with_record(\"Was ist QII?\")\n",
+    "res, record = tc2.with_record(app2, \"Was ist QII?\")\n",
     "res\n",
     "\n",
     "# Note that the response is now the appropriate language."
@@ -511,7 +511,7 @@
     "        feedback_mode=feedback_mode\n",
     "    )\n",
     "\n",
-    "    return tc"
+    "    return app, tc"
    ]
   },
   {
@@ -522,11 +522,11 @@
    "source": [
     "# Instantiate the version 3 app:\n",
     "\n",
-    "tc3 = v3_new_conversation()\n",
+    "app3, tc3 = v3_new_conversation()\n",
     "\n",
     "# Call the app:\n",
     "\n",
-    "res, record = tc3.call_with_record(\"Who is Shayak?\")\n",
+    "res, record = tc3.with_record(app3, \"Who is Shayak?\")\n",
     "res\n",
     "\n",
     "# Notice the `source_documents` returned now does not include the low-relevance\n",
@@ -566,7 +566,7 @@
     "        feedback_mode=feedback_mode\n",
     "    )\n",
     "\n",
-    "    return tc"
+    "    return app, tc"
    ]
   },
   {
@@ -603,18 +603,18 @@
     "apps = apps[0:2]\n",
     "questions = questions[0:2]\n",
     "\n",
-    "def test_app_on_question(app, question):\n",
-    "    print(app.__name__, question)\n",
-    "    app = app(feedback_mode=FeedbackMode.DEFERRED)\n",
-    "    answer = app.call_with_record(question)\n",
+    "def test_app_on_question(new_convo, question):\n",
+    "    print(new_convo.__name__, question)\n",
+    "    app, tc = new_convo(feedback_mode=FeedbackMode.DEFERRED)\n",
+    "    answer = tc.with_(app, question)\n",
     "    return answer\n",
     "\n",
     "# This asks all of the questions in parallel:\n",
-    "for app in apps:\n",
+    "for new_convo in apps:\n",
     "    for question in questions:\n",
     "        TP().promise(\n",
     "            test_app_on_question,\n",
-    "            app=app,\n",
+    "            new_convo=new_convo,\n",
     "            question=question\n",
     "        )\n",
     "\n",
@@ -631,6 +631,13 @@
     "\n",
     "Tru().start_evaluator(restart=True)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
