--- a/trulens_eval/examples/trubot/trubot_populate_db.ipynb
+++ b/trulens_eval/examples/trubot/trubot_populate_db.ipynb
@@ -55,7 +55,7 @@
     "pp = PrettyPrinter()\n",
     "\n",
     "# Reset the database if needed:\n",
-    "# Tru().reset_database()"
+    "Tru().reset_database()"
    ]
   },
   {
@@ -64,7 +64,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from examples.trubot.trubot import get_or_make_app, get_answer, f_lang_match, f_qs_relevance\n",
+    "from examples.trubot.trubot import get_or_make_app, get_answer\n",
     "\n",
     "app = get_or_make_app(cid=None, selector=3)"
    ]
