--- a/trulens_eval/examples/frameworks/custom/custom_example.ipynb
+++ b/trulens_eval/examples/frameworks/custom/custom_example.ipynb
@@ -30,7 +30,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from custom_app import CustomApp # our custom app\n",
+    "from examples.frameworks.custom.custom_app import CustomApp # our custom app\n",
     "\n",
     "from trulens_eval.tru_custom_app import TruCustomApp\n",
     "\n",
@@ -128,6 +128,13 @@
     "    force=True, _dev=Path().cwd().parent.parent.parent.resolve()\n",
     ")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
