warnings and bugfix (#413)
* warnings and bugfix

* bert deps

* check instrumented for __call__

* typo

* llama index bug workaround

* do not use full paths for llama_index classes

* instrument if subclass check fails

--- a/trulens_eval/examples/frameworks/llama_index/llama_index_quickstart.ipynb
+++ b/trulens_eval/examples/frameworks/llama_index/llama_index_quickstart.ipynb
@@ -89,9 +89,11 @@
    "source": [
     "from llama_index import VectorStoreIndex, SimpleWebPageReader\n",
     "\n",
-    "documents = SimpleWebPageReader(html_to_text=True).load_data(\n",
-    "    [\"http://paulgraham.com/worked.html\"]\n",
-    ")\n",
+    "# llama_index 0.8.15 bug: need to provide metadata_fn\n",
+    "documents = SimpleWebPageReader(\n",
+    "    html_to_text=True,\n",
+    "    metadata_fn=lambda url: dict(url=url)\n",
+    ").load_data([\"http://paulgraham.com/worked.html\"])\n",
     "index = VectorStoreIndex.from_documents(documents)\n",
     "\n",
     "query_engine = index.as_query_engine()"
