Chain of Thought reasons (#429)
* document openai usage

* add back dev note

* more code snippets

* add groundedness

* fix links

* format and markdowns

* format fix

* feedback to app loop

* links for selectors

* undo str replace not valid

* initial commit

* add cot to openai calls

* update groundedness function

* groundedness working

* support 0 rating when llms give it

* revert 0-10

* bring sentiment normalization to 1 to 10

* update notebook

--- a/trulens_eval/examples/vector-dbs/pinecone/langchain-retrieval-augmentation-with-trulens.ipynb
+++ b/trulens_eval/examples/vector-dbs/pinecone/langchain-retrieval-augmentation-with-trulens.ipynb
@@ -663,7 +663,7 @@
     "\n",
     "# Groundedness between each context chunk and the response.\n",
     "grounded = feedback.Groundedness(groundedness_provider=openai)\n",
-    "f_groundedness = feedback.Feedback(grounded.groundedness_measure).on(\n",
+    "f_groundedness = feedback.Feedback(grounded.groundedness_measure_with_cot_reasons).on(\n",
     "    Select.Record.app.combine_documents_chain._call.args.inputs.input_documents[:].page_content\n",
     ").on_output().aggregate(grounded.grounded_statements_aggregator)"
    ]
